--- a/app/views/main/info.html.erb
+++ b/app/views/main/info.html.erb
@@ -19,6 +19,13 @@
       <p>
         Feel free to reach out to me at <%= mail_to "lucasmccomb@gmail.com", name = nil, html_options = { class: 'mail-to'} %> with feedback or questions. Thanks for checking out my site!
       </p>
+      <p>
+        <a href="https://twitter.com/lukemccomb" target="_blank"><%= image_tag "twitterlogo.png", class: 'footer-logo' %></a>
+        <a href="https://github.com/lukemccomb" target="_blank"><%= image_tag "githublogo.png", class: 'footer-logo' %></a>
+        <a href="http://lukemcblog.com/" target="_blank"><%= image_tag "tumblrlogo.png", class: 'footer-logo' %></a>
+        <a href="http://instagram.com/lookeeluke" target="_blank"><%= image_tag "instalogo.png", class: 'footer-logo' %></a>
+        <a href="http://soundcloud.com/eluketronic/" target="_blank"><%= image_tag "soundcloudlogo.png", class: 'footer-logo' %></a>
+      </p>
     </div>
   </div>
 </div>
