--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,4 +7,5 @@ $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
 @import "modules/header/header";
 @import "modules/btns/btns";
 @import "modules/forms/forms";
+@import "modules/text/text";
 @import "modules/images/images";
