--- a/app/assets/stylesheets/modules/btns/_btns.scss
+++ b/app/assets/stylesheets/modules/btns/_btns.scss
@@ -1,11 +1,11 @@
 .btn {
-  background-color: white;
-  border-color: #337ab7;
-  color: #337ab7;
+  color: rgba(255, 255, 255, .75);
+  font-size: 20px;
+  background-color: transparent;
 }
 
 .btn:hover {
-  color: #1eb12d;
+  color: rgba(blue, .65);
 }
 
 .btn_left {
