--- a/app/assets/stylesheets/modules/header/header.scss
+++ b/app/assets/stylesheets/modules/header/header.scss
@@ -1,7 +1,8 @@
 .header {
-  background-color: rgba(255,255,255, .95);
-  padding: 1rem 0;
+  background-color: rgba(0,0,0, 1);
+  padding: 0;
   position: fixed;
+  bottom: 0;
   width: 100%;
   z-index: 1;
 }
@@ -30,4 +31,9 @@
 .nav-item {
   display: block;
   padding-left: 1rem;
+}
+
+.header-title {
+  position: fixed;
+  bottom: 5px;
 }
