--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,18 @@
-<div class="index-wrapper">
-  <div class="row">
-    
+<div class="info-wrapper">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-4 col-xs-offset-3">
+        <p class="lead">
+          <span id="info-type-animation0"></span><br/>
+          <span id="info-type-animation1"></span><br/>
+          <span id="info-type-animation2"></span><br/>
+          <span id="info-type-animation3"></span><br/>
+          <span id="info-type-animation4"></span><br/>
+        </p>
+        <div class="soundcloud-embed hidden">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/326304920&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
