--- a/app/views/main/info.html.erb
+++ b/app/views/main/info.html.erb
@@ -1,31 +1,18 @@
 <div class="info-wrapper">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="head-shot-wrapper">
-        <%= image_tag "luke_mccomb.jpg", :class => "head-shot" %>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-4 col-xs-offset-3">
+        <p class="lead">
+          <span id="info-type-animation0"></span><br/>
+          <span id="info-type-animation1"></span><br/>
+          <span id="info-type-animation2"></span><br/>
+          <span id="info-type-animation3"></span><br/>
+          <span id="info-type-animation4"></span><br/>
+        </p>
+        <div class="soundcloud-embed hidden">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/326304920&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+        </div>
       </div>
-    </div>
-    <div class="col-md-8">
-      <p>
-        My name is Luke. I develop software for the web, take pictures and enjoy exploring the great outdoors.<br />
-        I live in Boulder, CO and work at a digital agency by the name of <%= link_to "Mondo Robot", "http://www.mondorobot.com/#/home", :target => "_blank" %>.
-        I'm from the <%= link_to "Constitution State", "http://ctstatelibrary.org/CT-nicknames", :target => "_blank" %> originally.
-      </p>
-
-      <p>
-        I attended the <%= link_to "S.I. Newhouse School", "http://newhouse.syr.edu/", :target => "_blank" %> at Syracuse University where I received a B.A. in Visual and Interactive Communications with a focus on photography. In June of 2014 I enrolled in Galvanize's <%= link_to "full stack web development training course", "http://www.galvanize.com/courses/full-stack/#.VeyONNNViko", :target => "_blank"%> where I learned how to develop software using technologies such as Ruby on Rails and JavaScript.<br />
-      </p>
-
-      <p>
-        Feel free to reach out to me at <%= mail_to "lucasmccomb@gmail.com", name = nil, html_options = { class: 'mail-to'} %> with feedback or questions. Thanks for checking out my site!
-      </p>
-      <p>
-        <a href="https://twitter.com/lukemccomb" target="_blank"><%= image_tag "twitterlogo.png", class: 'footer-logo' %></a>
-        <a href="https://github.com/lukemccomb" target="_blank"><%= image_tag "githublogo.png", class: 'footer-logo' %></a>
-        <a href="http://lukemcblog.com/" target="_blank"><%= image_tag "tumblrlogo.png", class: 'footer-logo' %></a>
-        <a href="http://instagram.com/lookeeluke" target="_blank"><%= image_tag "instalogo.png", class: 'footer-logo' %></a>
-        <a href="http://soundcloud.com/eluketronic/" target="_blank"><%= image_tag "soundcloudlogo.png", class: 'footer-logo' %></a>
-      </p>
     </div>
   </div>
 </div>
