Adds require to application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,8 @@
+/*
+ *= require_tree .
+ *= require_self
+ */
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -9,4 +14,3 @@
 @import "modules/text/text";
 @import "modules/images/images";
 @import "modules/layout";
-*= require_tree
