--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,6 @@
     <div class="container-fluid padding-all-0">
       <%= yield %>
     </div>
+    <%= render partial: "layouts/footer" %>
   </body>
 </html>
