--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-2 col-xs-offset-10">
-        © Luke McComb 2017
+        <p class="text-darker">© Luke McComb 2017</p>
       </div>
     </div>
   </div>
