--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 <div class="info-wrapper">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-4 col-xs-offset-3">
+      <div class="col-xs-5 text-right">
         <p class="lead">
           <span id="info-type-animation0"></span><br/>
           <span id="info-type-animation1"></span><br/>
