--- a/app/views/main/info.html.erb
+++ b/app/views/main/info.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-4 col-xs-offset-3">
-        <p class="lead">
+        <p class="lead text-darker">
           <span id="info-type-animation0"></span><br/>
           <span id="info-type-animation1"></span><br/>
           <span id="info-type-animation2"></span><br/>
