--- a/app/assets/stylesheets/modules/layout.scss
+++ b/app/assets/stylesheets/modules/layout.scss
@@ -1,3 +1,28 @@
-.padding-all-0 {
+.padding_all-0 {
   padding: 0;
+}
+
+.margin_all-0 {
+  margin: 0;
+}
+
+.margin_top-0 {
+  margin-top: 0;
+}
+
+.margin_bottom-0 {
+  margin-bottom: 0;
+}
+
+.pad_left-5 {
+  padding-left: 5;
+}
+
+.pad_right-5 {
+  padding-right: 5;
+}
+
+.navbar-nav > li > a.link_thin {
+  padding-left: 7px;
+  padding-right: 7px;
 }
