--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,27 +4,43 @@
       <%= link_to "Luke McComb", root_path, class: 'navbar-brand' %>
     </div>
     <ul class="nav navbar-nav navbar-left">
-      <li><%= link_to "Info", "/info", class: [] %></li>
       <li><%= link_to "Photography", "/grid", class: [] %></li>
+      <li>
+        <%= bootstrap_form_for(:search, url: search_path, method: :get) do |form| %>
+        <%= form.text_field :term,
+          hide_label: true,
+          placeholder: "Search for...",
+          wrapper: { class: 'margin_bottom-0'},
+          class: [
+            "form-control",
+            "bg_transparent",
+            "input_minimal",
+            "boxShadow_minimal",
+            "margin_top-0",
+            "margin_bottom-0"
+          ],
+          icon: "search" %>
+        <% end %>
+      </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
-        <%= link_to "https://twitter.com/lukemccomb", target: "_blank" do %>
+        <%= link_to "https://twitter.com/lukemccomb", target: "_blank", class: 'link_thin' do %>
           <%= image_tag "twitterlogo.png", class: 'header-logo' %>
         <% end %>
       </li>
       <li>
-        <%= link_to "https://github.com/lukemccomb", target: "_blank" do %>
+        <%= link_to "https://github.com/lukemccomb", target: "_blank", class: 'link_thin' do %>
           <%= image_tag "githublogo.png", class: 'header-logo' %>
         <% end %>
       </li>
       <li>
-        <%= link_to "http://instagram.com/lukeyluuke", target: "_blank" do %>
+        <%= link_to "http://instagram.com/lukeyluuke", target: "_blank", class: 'link_thin' do %>
           <%= image_tag "instalogo.png", class: 'header-logo' %>
         <% end %>
       </li>
       <li>
-        <%= link_to "http://soundcloud.com/eluketronic/", target: "_blank" do %>
+        <%= link_to "http://soundcloud.com/eluketronic/", target: "_blank", class: 'link_thin' do %>
           <%= image_tag "soundcloudlogo.png", class: 'header-logo' %>
         <% end %>
       </li>
