--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
   <body class="body">
     <%= render partial: "layouts/header" %>
-    <div class="container-fluid padding-all-0">
+    <div class="container-fluid padding_all-0">
       <%= yield %>
     </div>
     <%= render partial: "layouts/footer" %>
