--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "text_type" %>
 <div class="info-wrapper">
   <div class="container-fluid">
     <div class="row">
@@ -7,11 +8,7 @@
           <span id="info-type-animation1"></span><br/>
           <span id="info-type-animation2"></span><br/>
           <span id="info-type-animation3"></span><br/>
-          <span id="info-type-animation4"></span><br/>
         </p>
-        <div class="soundcloud-embed hidden">
-          <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/326304920&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-        </div>
       </div>
     </div>
   </div>
