Changes images schema to have keywords as an array,
- changes Flickr import to grab tags instead of description to determine keywords
- changes search query

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,6 +49,7 @@
           aria-expanded="false">
           <%= fa_icon "code" %>
           Projects
+          <span class="caret"></span>
         </a>
         <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
           <li>
