--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -7,8 +7,8 @@
 <h2 class="searchTerm">Images related to: <%= @search.term %></h2>
 <% @search.images.each do |image| %>
   <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2">
-    <a href="/images/<%= image.id %>">
-      <img src="<%= image.thumb %>"/ class="grid-image">
+    <a href="/images/<%= image['id'] %>">
+      <img src="<%= image['thumb'] %>"/ class="grid-image">
     </a>
   </div>
 <% end %>
